tests/should_fail/let_destructure_option_some.nv
module test
// let destructure with Option Some pattern (refutable, not allowed)
let Some(x) = Some(42)
